# protodantic

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
checks/: typing_smoke.py
src/protodantic/: __init__.py  cli.py  codegen.py  compiler.py  reflection.py  runtime.py  types.py
tests/: conftest.py  test_cli.py  test_codegen_output.py  test_enums.py  test_ergonomics.py  test_multifile.py  test_naming.py  test_nesting.py  test_package_tree.py  test_pb2_generation.py  test_pb2_interop.py  test_presence.py  test_proto2.py  test_recursion.py  test_registry.py  test_roundtrip.py  test_scalars.py  test_wire_compat.py  test_wkt.py
tests/protos/: anypayload.proto  collision_a.proto  collision_b.proto  common.proto  demo.proto  enums.proto  hostile_names.proto  legacy.proto  naming.proto  nesting.proto  orders.proto  presence.proto  recursion.proto  scalars.proto  shadowing.proto  structs.proto  wire.proto  wkt.proto  wrappers.proto
tests/protos/tree/misc/: oddly_placed.proto
tests/protos/tree/myorg/: billing.proto  common.proto
tests/protos/tree/myorg/analytics/: events.proto
