[project]
name = "protodantic"
version = "0.1.0"
description = "Bidirectional bridge between Protocol Buffers and Pydantic: generate pydantic models from .proto files with lossless round-trips to proto messages and wire bytes"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "protobuf>=6.30",
    "grpcio-tools>=1.66",
]

[project.scripts]
protodantic = "protodantic.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/protodantic"]
