[project]
name = "protodantic-py"
dynamic = ["version"]
description = "Bidirectional bridge between Protocol Buffers and Pydantic: generate pydantic models from .proto files with lossless round-trips to proto messages and wire bytes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "My Koryto", email = "mykoryto93@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["protobuf", "pydantic", "codegen", "serialization", "grpc", "proto3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "protobuf>=6.30",
    "grpcio-tools>=1.66",
    "click>=8.2",
]

[project.urls]
Repository = "https://github.com/Koryto/protodantic"
Issues = "https://github.com/Koryto/protodantic/issues"
Changelog = "https://github.com/Koryto/protodantic/blob/master/CHANGELOG.md"

[project.scripts]
protodantic = "protodantic.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]
quality = [
    "mypy>=1.17",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "types-protobuf>=6.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/protodantic/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/protodantic"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.coverage.run]
branch = true
source = ["protodantic"]

[tool.coverage.report]
fail_under = 95
show_missing = true
